# unieai_mcp_mesdemo

./: Dockerfile  LICENSE  pyproject.toml  setup.cfg
src/mes-assistant-mcp/: server.py
src/unieai_mcp_mesdemo/: main.py  server.py
