[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "unieai-mcp-mesdemo"
version = "0.1.0"
description = "MCP server for MES System (Staff and Job management)"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "unieai_mcp_mesdemo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^0.4.1"
httpx = "^0.27.0"
uvicorn = "^0.23.0"
fastapi = "^0.100.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.2.0"

[tool.poetry.scripts]
# 這行讓你在終端機輸入 mes-mcp 就能啟動 Server
unieai-mcp-mesdemo = "unieai_mcp_mesdemo.server:main"