[metadata]
name = unieai_mcp_mesdemo
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = MCP server for MES System (Staff and Job management)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your-website.com/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    # === MCP Core Framework ===
    fastmcp >= 0.4.1
    fastapi >= 0.104.0
    uvicorn >= 0.23.0

    # === Core Libraries ===
    pydantic >= 2.0.0
    python-dotenv >= 1.0.1
    httpx >= 0.24.0
    requests >= 2.31.0

    # === Utility ===
    rich >= 13.7.1
    tenacity >= 8.3.0

python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    unieai-mcp-mesdemo = unieai_mcp_mesdemo.server:main